--- a/tea-defi-dapp/frontend/package.json
+++ b/tea-defi-dapp/frontend/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ethers": "^6.0.0",
+    "ethers": "^6.13.4",
     "next": "15.3.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^9.13.0",
     "eslint-config-next": "15.3.0"
   }
 }
