--- a/tea-defi-dapp/package.json
+++ b/tea-defi-dapp/package.json
@@ -5,6 +5,10 @@
     "hardhat": "^2.23.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.3.0"
+    "@openzeppelin/contracts": "^5.3.0",
+    "ethers": "^6.13.5",
+    "next": "^15.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
